--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
 	<meta property="og:image" content="path/to/image.jpg">
 	<link rel="icon" href="img/favicon/favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
-	<!-- Template Basic Images End -->
+	<!-- Template Basic Images Ending -->
 	
 	<!-- Custom Browsers Color Start -->
 	<meta name="theme-color" content="#000">
