--- a/app/index.html
+++ b/app/index.html
@@ -54,6 +54,21 @@
 						</div>
 					</div>
 				</div>
+				<div class="container">
+					<div class="row justify-content-center">
+						<div class="col-10">
+							<img src="img/logo.png" alt="Suplissimo" class="img-responsive img-width">
+						</div>
+					</div>
+				</div>
+				<div class="description text-center">
+					<div class="container">
+							<h2 class=" description_header">We are</h2>
+							<p class="description_text">		
+								Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus 
+							</p>
+					</div>
+				</div>
 			</header>
 		</div>
 	</div>
