--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
 
 	<div id="my-page">
 		<div id="my-header">
-			<header class="site-header" id="home" style="background-image: url('img/header_bg.jpg');">
+			<section class="site-header" id="home" style="background-image: url('img/header_bg.jpg');">
 				<div class="top-line waypoint-container">
 					<div class="container clearfix">
 						<a href="#" class="logo">
@@ -69,7 +69,30 @@
 							</p>
 					</div>
 				</div>
-			</header>
+				<div class="statistic text-center">
+					<div class="container">
+							<h2 class="description_header">Platform Statistics</h2>
+						<div class="row">
+							<div class="col-md-3 statistic_item">
+								<div class="count">7b</div>
+								<div class="count_name">Impressions/ <br> Month</div>
+							</div>
+							<div class="col-md-3 statistic_item">
+								<div class="count">15k</div>
+								<div class="count_name">Websites</div>
+							</div>
+							<div class="col-md-3 statistic_item">
+								<div class="count">11k</div>
+								<div class="count_name">Сampaigns</div>
+							</div>
+							<div class="col-md-3 statistic_item">
+								<div class="count">23</div>
+								<div class="count_name">Countries</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 		</div>
 	</div>
 	
