--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	
 	<!-- Template Basic Images Start -->
-	<meta property="og:image" content="path/to/image.jpg">
+	<meta property="og:image" content="img/logo.png">
 	<link rel="icon" href="img/favicon/favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
 	<!-- Template Basic Images Ending -->
@@ -27,6 +27,9 @@
 </head>
 
 <body class="ishome">
+	<div class="preloader"><div class="pulse"></div></div>
+
+	<div class="top" title="Go top"></div>
 
 	<!-- Custom HTML -->
 
@@ -61,7 +64,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="description text-center">
+				<div class="description text-center" id="about">
 					<div class="container">
 							<h2 class=" description_header">We are</h2>
 							<p class="description_text">		
@@ -74,26 +77,26 @@
 							<h2 class="description_header">Platform Statistics</h2>
 						<div class="row">
 							<div class="col-md-3 col-sm-6 col-xs-6 statistic_item">
-								<div class="count">7b</div>
+								<div class="count"><span class="spinkrement">7</span>b</div>
 								<div class="count_name">Impressions/ <br> Month</div>
 							</div>
 							<div class="col-md-3 col-sm-6 col-xs-6 statistic_item">
-								<div class="count">15k</div>
+								<div class="count"><span class="spinkrement">15</span>k</div>
 								<div class="count_name">Websites</div>
 							</div>
 							<div class="col-md-3 col-sm-6 col-xs-6 statistic_item">
-								<div class="count">11k</div>
+								<div class="count"><span class="spinkrement">11</span>k</div>
 								<div class="count_name">Сampaigns</div>
 							</div>
 							<div class="col-md-3 col-sm-6 col-xs-6 statistic_item">
-								<div class="count">23</div>
+								<div class="count"><span class="spinkrement">23</div>
 								<div class="count_name">Countries</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</section>
-			<section class="contact">
+			<section class="contact" id="contact">
 					<h2 class="description_header text-center">Contact us</h2>
 				<div class="container">
 					<div class="row justify-content-center">
@@ -123,7 +126,7 @@
 														<!-- <div class="error-box" style="color: #ff0000; font-size: 12px;"></div> -->
 												</div>
 										</div>
-										<textarea class="reset" name="Message" id="message_text"  cols="30" rows="8" placeholder="Message"></textarea>
+										<textarea class="reset" name="Message" id="message_text"  cols="30" rows="8" placeholder="Message" required></textarea>
 										<!-- <div class="error-box" style="color: #ff0000; font-size: 12px;"></div> -->
 										<button class="sub_button btn" onclick="checkForm()">Send</button>
 								</form>
