--- a/app/index.html
+++ b/app/index.html
@@ -11,13 +11,13 @@
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	
+
 	<!-- Template Basic Images Start -->
 	<meta property="og:image" content="img/logo.png">
 	<link rel="icon" href="img/favicon/favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
 	<!-- Template Basic Images Ending -->
-	
+
 	<!-- Custom Browsers Color Start -->
 	<meta name="theme-color" content="#000">
 	<!-- Custom Browsers Color End -->
@@ -27,7 +27,9 @@
 </head>
 
 <body class="ishome">
-	<div class="preloader"><div class="pulse"></div></div>
+	<div class="preloader">
+		<div class="pulse"></div>
+	</div>
 
 	<div class="top" title="Go top"></div>
 
@@ -42,18 +44,24 @@
 							<img src="img/logo.png" alt="Suplissimo company" class="img-responsive img-width">
 						</a>
 						<div class="navigation">
-							
+
 							<nav id="my-menu">
 								<ul class="nav_list" id="nav_list">
-									<li class="list_item active"><a href="#home">Home</a></li>
-									<li class="list_item"><a href="#about">About Us</a></li>
-									<li class="list_item"><a href="#contact">Contact Us</a></li>
+									<li class="list_item active">
+										<a href="#home">Home</a>
+									</li>
+									<li class="list_item">
+										<a href="#about">About Us</a>
+									</li>
+									<li class="list_item">
+										<a href="#contact">Contact Us</a>
+									</li>
 								</ul>
 							</nav>
-	
-							<button  class="menu-btn">
+
+							<button class="menu-btn">
 								<span></span>
-							</button> 
+							</button>
 						</div>
 					</div>
 				</div>
@@ -66,30 +74,40 @@
 				</div>
 				<div class="description text-center" id="about">
 					<div class="container">
-							<h2 class=" description_header">We are</h2>
-							<p class="description_text">		
-								Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus 
-							</p>
+						<h2 class=" description_header">We are</h2>
+						<p class="description_text">
+							Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque
+							penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
+							pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget,
+							arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.
+							Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula,
+							porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus
+						</p>
 					</div>
 				</div>
 				<div class="statistic text-center">
 					<div class="container">
-							<h2 class="description_header">Platform Statistics</h2>
+						<h2 class="description_header">Platform Statistics</h2>
 						<div class="row">
 							<div class="col-md-3 col-sm-6 col-xs-6 statistic_item">
-								<div class="count"><span class="spinkrement">7</span>b</div>
-								<div class="count_name">Impressions/ <br> Month</div>
+								<div class="count">
+									<span class="spinkrement">7</span>b</div>
+								<div class="count_name">Impressions/
+									<br> Month</div>
 							</div>
 							<div class="col-md-3 col-sm-6 col-xs-6 statistic_item">
-								<div class="count"><span class="spinkrement">15</span>k</div>
+								<div class="count">
+									<span class="spinkrement">15</span>k</div>
 								<div class="count_name">Websites</div>
 							</div>
 							<div class="col-md-3 col-sm-6 col-xs-6 statistic_item">
-								<div class="count"><span class="spinkrement">11</span>k</div>
+								<div class="count">
+									<span class="spinkrement">11</span>k</div>
 								<div class="count_name">Сampaigns</div>
 							</div>
 							<div class="col-md-3 col-sm-6 col-xs-6 statistic_item">
-								<div class="count"><span class="spinkrement">23</div>
+								<div class="count">
+									<span class="spinkrement">23</div>
 								<div class="count_name">Countries</div>
 							</div>
 						</div>
@@ -97,57 +115,64 @@
 				</div>
 			</section>
 			<section class="contact" id="contact">
-					<h2 class="description_header text-center">Contact us</h2>
+				<h2 class="description_header text-center">Contact us</h2>
 				<div class="container">
 					<div class="row justify-content-center">
 						<div class="col-lg-6 col-md-8">
-								<form class="callback clearfix">
-										<div class="success">
-												<span class="close_succes" onclick="event.preventDefault(); $('.success').removeClass('active').hide();$('.reset').val('');$('.error-box').hide();" ></span>
-												<span class="success_text text-center">Your email have been sent, <br> We'll reply you shortly</span> 
-										</div>
-										<!-- Hidden Required Fields -->
-										<input type="hidden" name="project_name" value="Sublissimo">
-										<input type="hidden" name="admin_email" value="vatslav.zoltan@gmail.com"><!-- Admin email -->
-										<input type="hidden" name="form_subject" value="Sublissimo application">
-										<input type="hidden" name="Sublissimo page" value="Sublissimo page">
-										<!-- END Hidden Required Fields -->
-										<div class="input_wrapper clearfix">
-												<div class="input_box">
-														<input class="reset" type="text" name="Name" id="user_name" placeholder="Your name" required>
-														<!-- <div class="error-box" style="color: #ff0000; font-size: 12px;"></div> -->
-												</div>
-												<div class="input_box">
-														<input class="reset" type="email" name="E-mail" id="user_email" placeholder="Email Adress" required>
-														<!-- <div class="error-box" style="color: #ff0000; font-size: 12px;"></div> -->
-												</div>
-												<div class="input_box">
-														<input class="reset" type="text" name="Company name" id="user_company_name" placeholder="Company Name" required>
-														<!-- <div class="error-box" style="color: #ff0000; font-size: 12px;"></div> -->
-												</div>
-										</div>
-										<textarea class="reset" name="Message" id="message_text"  cols="30" rows="8" placeholder="Message" required></textarea>
+							<form class="callback clearfix">
+								<div class="success">
+									<span class="close_succes" onclick="event.preventDefault(); $('.success').removeClass('active').hide();$('.reset').val('');$('.error-box').hide();"></span>
+									<span class="success_text text-center">Your email have been sent,
+										<br> We'll reply you shortly</span>
+								</div>
+								<!-- Hidden Required Fields -->
+								<input type="hidden" name="project_name" value="Sublissimo">
+								<input type="hidden" name="admin_email" value="contact@suplissimo.com">
+								<!-- Admin email -->
+								<input type="hidden" name="form_subject" value="Sublissimo application">
+								<input type="hidden" name="Sublissimo page" value="Sublissimo page">
+								<!-- END Hidden Required Fields -->
+								<div class="input_wrapper clearfix">
+									<div class="input_box">
+										<input class="reset" type="text" name="Name" id="user_name" placeholder="Your name" required>
 										<!-- <div class="error-box" style="color: #ff0000; font-size: 12px;"></div> -->
-										<button class="sub_button btn" onclick="checkForm()">Send</button>
-								</form>
+									</div>
+									<div class="input_box">
+										<input class="reset" type="email" name="E-mail" id="user_email" placeholder="Email Adress" required>
+										<!-- <div class="error-box" style="color: #ff0000; font-size: 12px;"></div> -->
+									</div>
+									<div class="input_box">
+										<input class="reset" type="text" name="Company name" id="user_company_name" placeholder="Company Name" required>
+										<!-- <div class="error-box" style="color: #ff0000; font-size: 12px;"></div> -->
+									</div>
+								</div>
+								<textarea class="reset" name="Message" id="message_text" cols="30" rows="8" placeholder="Message" required></textarea>
+								<!-- <div class="error-box" style="color: #ff0000; font-size: 12px;"></div> -->
+								<button class="sub_button btn" onclick="checkForm()">Send</button>
+							</form>
 						</div>
 					</div>
 				</div>
 				<div class="footer">
-						<div class="container">
-								<div class="footer__box">
-										<span class="copyright">&#169; Suplissimo </span>
-										<span class="date"><script>document.write(new Date().getFullYear() )</script></span>
-								</div>
+					<div class="container">
+						<div class="footer__box">
+							<span class="copyright">&#169; Suplissimo </span>
+							<span class="date">
+								<script>
+									document.write(new Date().getFullYear())
+								</script>
+							</span>
 						</div>
+					</div>
 				</div>
 			</section>
-			
+
 		</div>
 	</div>
-	
+
 
 	<script src="js/scripts.min.js"></script>
 
 </body>
+
 </html>
