--- a/app/index.html
+++ b/app/index.html
@@ -91,7 +91,8 @@
 						<div class="row">
 							<div class="col-md-3 col-sm-6 col-xs-6 statistic_item">
 								<div class="count">
-									<span class="spinkrement">7</span>b</div>
+									<span class="spinkrement">7</span>b
+								</div>
 								<div class="count_name">Impressions/
 									<br> Month</div>
 							</div>
@@ -102,12 +103,14 @@
 							</div>
 							<div class="col-md-3 col-sm-6 col-xs-6 statistic_item">
 								<div class="count">
-									<span class="spinkrement">11</span>k</div>
+									<span class="spinkrement">11</span>k
+								</div>
 								<div class="count_name">Сampaigns</div>
 							</div>
 							<div class="col-md-3 col-sm-6 col-xs-6 statistic_item">
 								<div class="count">
-									<span class="spinkrement">23</div>
+									<span class="spinkrement">23</span>
+								</div>
 								<div class="count_name">Countries</div>
 							</div>
 						</div>
